Buttons added More text styles added

--- a/blog-northern-lights.html
+++ b/blog-northern-lights.html
@@ -31,8 +31,8 @@
     
         <article>
             <address>
-                <p class="name"> Jane Li </p>
-                <p class="role">Researcher, writer</p>
+                <p><b>John Lin</b></p>
+                <p><em>Researcher, writer</em></p>
             </address>
 
             <div class="content">
@@ -45,6 +45,11 @@
             <div id="lights-1" class="img grid-1" alt="northern lights portrait"></div>
             <div id="lights-2" class="img grid-2" alt="northern lights with mountains"></div>
 
+            <figure>
+                <blockquote cite="https://g.co/kgs/8pG4By">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sint adipisci neque aperiam modi velit, tenetur ducimus, sit labore laborum illo quibusdam dolorem dignissimos dolores. Quam et iusto molestiae voluptate?</blockquote>
+                <figcaption>–Cicero, <cite>Di finibus bonorum et malorum</cite></figcaption>
+            </figure>
+            
             <div class="content">
                 <p>Dolore assumenda corporis officiis blanditiis aliquid amet possimus laudantium, magnam aliquam commodi quam perspiciatis soluta perferendis exercitationem nihil dolores nulla.</p>
                 <br>
@@ -62,15 +67,13 @@
     <footer>
         <div class="next-article-details">
             <p class="category">read next</p>
-            <a href="blog_reef-culture.html">
-            <div class="next-article-title card">
+            <div class="next-article-title">
                 <h1>Reef culture</h1>
                 <h2>Changing tides in reef rescue approaches</h2>                
             </div>
-            </a>
+            <button type="button"><a href="blog_reef-culture.html">read more</a></button>
         </div>
         <div class="next-hero-image reef-hero"></div>
     </footer>
-
 </body>
 </html>
