--- a/blog_reef-culture.html
+++ b/blog_reef-culture.html
@@ -30,8 +30,8 @@
     
         <article>
             <address>
-                <p class="name"> Jane Li </p>
-                <p class="role">Researcher, writer</p>
+                <p><b>Jane Li</b></p>
+                <p><em>Researcher, writer</em></p>
             </address>
 
             <div class="content">
@@ -43,6 +43,11 @@
 
             <div id="reef-1" class="img grid-1" alt="turtle swimming in the ocean"></div>
             <div id="reef-2" class="img grid-2" alt="close up image of a coral"></div>
+
+            <figure>
+                <blockquote cite="https://g.co/kgs/8pG4By">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sint adipisci neque aperiam modi velit, tenetur ducimus, sit labore laborum illo quibusdam dolorem dignissimos dolores. Quam et iusto molestiae voluptate?</blockquote>
+                <figcaption>–Cicero, <cite>Di finibus bonorum et malorum</cite></figcaption>
+            </figure>
 
             <div class="content">
                 <p>Dolore assumenda corporis officiis blanditiis aliquid amet possimus laudantium, magnam aliquam commodi quam perspiciatis soluta perferendis exercitationem nihil dolores nulla.</p>
@@ -61,12 +66,11 @@
     <footer>
         <div class="next-article-details">
             <p class="category">read next</p>
-            <a href="blog_strange-growth.html">
-            <div class="next-article-title card">
+            <div class="next-article-title">
                 <h1>Strange growth patterns</h1>
                 <h2>ventilation system made by growing mushroom</h2>                
             </div>
-            </a>
+            <button type="button"><a href="blog_strange-growth.html">read more</a></button>
         </div>
         <div class="next-hero-image mushroom-article"></div>
     </footer>
