--- a/blog_into-the-drought.html
+++ b/blog_into-the-drought.html
@@ -31,8 +31,8 @@
     
         <article>
             <address>
-                <p class="name"> Jane Li </p>
-                <p class="role">Researcher, writer</p>
+                <p><b>Jane Li</b></p>
+                <p><em>Researcher, writer</em></p>
             </address>
 
             <div class="content">
@@ -45,6 +45,11 @@
             <div id="desert-1" class="img grid-1" alt="desert landscape"></div>
             <div id="desert-2" class="img grid-2" alt="desert sand patterns"></div>
 
+            <figure>
+                <blockquote cite="https://g.co/kgs/8pG4By">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit sint adipisci neque aperiam modi velit, tenetur ducimus, sit labore laborum illo quibusdam dolorem dignissimos dolores. Quam et iusto molestiae voluptate?</blockquote>
+                <figcaption>–Cicero, <cite>Di finibus bonorum et malorum</cite></figcaption>
+            </figure>
+            
             <div class="content">
                 <p>Dolore assumenda corporis officiis blanditiis aliquid amet possimus laudantium, magnam aliquam commodi quam perspiciatis soluta perferendis exercitationem nihil dolores nulla.</p>
                 <br>
@@ -62,12 +67,11 @@
     <footer>
         <div class="next-article-details">
             <p class="category">read next</p>
-            <a href="blog-northern-lights.html">
-            <div class="next-article-title card">
+            <div class="next-article-title">
                 <h1>Northern lights</h1>
                 <h2>changing sceneries</h2>                
             </div>
-            </a>
+            <button type="button"><a href="blog-northern-lights.html">read more</a></button>
         </div>
         <div class="next-hero-image lights-article"></div>
     </footer>
