--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <ul>
-            <li id="logo">nture</li>
+            <li class="logo">nture</li>
         </ul>
     </nav>
 
@@ -64,5 +64,20 @@
             </div>
         </a> 
     </main>
+
+    <footer>
+        <div>
+            <p class="logo">Nture</p>
+            <p id="legal">Copyright 2023</p>
+        </div>
+
+        <div class="socials">
+            <ul>
+                <li><a href="https://twitter.com/">Twitter</a></li>
+                <li><a href="https://www.facebook.com/">Facebook</a></li>
+                <li><a href="https://au.linkedin.com/">Linkedin</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
